Made some usage a bit clearer.
Increased the size of the link at the top.
Added more instruction on the right.

Issue: #69

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,8 @@
 					</div>
 
 					<div class="InformationCard" v-bind:style="{ display: infoCardInstructionDisplay }">
-						Double-click any county on the map to track its data here.
+						<p>Click the report title to change the data view.</p>
+						<p>Double-click any county on the map to track its data here.</p>
 					</div>
 			</div>
 		</div>
