Added a little more instruction.
Issue: #69

--- a/src/index.html
+++ b/src/index.html
@@ -169,6 +169,7 @@
 					<div class="InformationCard" v-bind:style="{ display: infoCardInstructionDisplay }">
 						<p>Click the report title to change the data view.</p>
 						<p>Double-click any county on the map to track its data here.</p>
+						<p>Click the play button below the map or drag the slider to move across the date range from beginning to end.</p>
 					</div>
 			</div>
 		</div>
