Added population to county info cards.
Closes: #76

--- a/src/index.html
+++ b/src/index.html
@@ -85,10 +85,11 @@
 					<div class="InformationCard TitleCard">
 						<h3>{{ displayDateString }}</h3>
 					</div>
+
 					<div v-for="item in infoCards" class="InformationCard" v-bind:id="'InfoCard_' + item.id" v-bind:key="item.id"
 						 v-on:mouseenter="mouseenterInfoCard" v-on:mouseleave="mouseleaveInfoCard">
 
-						<h4>{{ item.placeName }}</h4>
+						<h4>{{ item.placeName }} <span class="InfoCardPopulation">(population {{ item.population }})</span></h4>
 						<button v-bind:id="'BtnRemoveCard_' + item.id" class="InfoCardRemovalButton">X</button>
 
 						<table v-if="item.dataExists" class="CountyInfoCardTable">
